@@ -12,10 +12,12 @@
 
 namespace log4cpp {
 
-    static const std::string names[10] = {
-        "FATAL", "ALERT", "CRIT", "ERROR", "WARN",
-        "NOTICE", "INFO", "DEBUG", "NOTSET", "UNKNOWN" 
-    };
+    namespace {
+        const std::string names[10] = {
+            "FATAL", "ALERT", "CRIT", "ERROR", "WARN",
+            "NOTICE", "INFO", "DEBUG", "NOTSET", "UNKNOWN" 
+        };
+    }
 
     const std::string& Priority::getPriorityName(int priority) throw() {
          
